# simple-bot-py

./: main.py  pyproject.toml  pyrefly.toml
src/agent/: customer_service_agent.py
src/agent/prompts/: customer_service_system_prompt.j2
src/data/db/: config.py  database.py
src/data/dto/: create_order_dto.py  create_product_dto.py  customer_service_agent_deps.py  daily_menu_item_dto.py  order_detail_dto.py  order_item_detail_dto.py  order_status_enum.py  product_details_dto.py  product_search_result_dto.py  search_product_by_embedding_dto.py  update_order_items_dto.py
src/data/models/: chat.py  daily_menu.py  order_items.py  orders.py  products.py
src/data/repository/: chat_repository.py  daily_menu_repository.py  order_repository.py  product_repository.py
src/routes/: order_routes.py  product_routes.py
src/services/: chat_service.py  daily_menu_service.py  order_service.py  product_service.py
src/utils/: date_utils.py  embedder.py  nanoid.py
